# session-tui

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DOLT_REMOTE.md  README.md  manifest
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml
examples/: scan.rs
scripts/: e2e.py
src/: app.rs  input.rs  lib.rs  main.rs  picker.rs  roster.rs  sessions.rs  term.rs  ui.rs
tests/: app_test.rs  input_test.rs  picker_test.rs  roster_test.rs  sessions_test.rs  term_test.rs  ui_test.rs
tests/fixtures/: mod.rs
