[package]
name = "session-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
crossterm = "0.29.0"
dirs = "6.0.0"
notify = "8.2.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tui-term = "0.3.4"
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3.27.0"
